es convert added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(es_cole_c7)
 export(es_common_language_is)
 export(es_common_language_ps)
 export(es_cont_coeff)
+export(es_convert)
 export(es_cramer_v_gof)
 export(es_cramer_v_ind)
 export(es_digby_h)
