error fixing some documentation stuff. More to come...

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,6 +59,7 @@ export(es_yule_r)
 export(es_yule_y)
 export(he_AS71)
 export(he_AS89)
+export(he_import_global)
 export(he_kendall)
 export(he_owa_table)
 export(he_permutations)
@@ -138,3 +139,6 @@ export(ts_yuen_is)
 export(ts_z_is)
 export(ts_z_os)
 export(ts_z_ps)
+import(stats)
+importFrom(fMultivar,pnorm2d)
+importFrom(gsl,hyperg_2F1)
