--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,8 +12,7 @@ Imports:
   fMultivar, 
   polycor, 
   pspearman
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.0
