--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,6 +57,8 @@ export(es_vargha_delaney_a)
 export(es_yule_q)
 export(es_yule_r)
 export(es_yule_y)
+export(hEfn1)
+export(hEfn2)
 export(he_AS71)
 export(he_AS89)
 export(he_import_global)
