Simple bar and pie chart added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -141,6 +141,9 @@ export(ts_yuen_is)
 export(ts_z_is)
 export(ts_z_os)
 export(ts_z_ps)
+export(vi_bar_simple)
+export(vi_pie)
+import(graphics)
 import(stats)
 importFrom(fMultivar,pnorm2d)
 importFrom(gsl,hyperg_2F1)
