--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,8 @@ Authors@R:
            comment = c(ORCID = "YOUR-ORCID-ID"))
 Description: The goal of stikpetR is to provide functions for statistical analysis of surveys. The functions are documented with the formulas and references used. The functions are NOT optimized but instead relatively easy to follow. If you would look at the source code it is most often a combination of if statements and for loops..
 Depends:
-  stats
+  stats, 
+  graphics
 Imports:
   gsl, 
   fMultivar, 
