added Pie chart, Dot Plot, Cleveland dot plot, Pareto chart, and adjusted some documentation.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,9 @@ Imports:
   gsl, 
   fMultivar, 
   polycor, 
-  pspearman
+  pspearman,
+  ggplot2,
+  lattice
 License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
