--- a/NAMESPACE
+++ b/NAMESPACE
@@ -69,6 +69,7 @@ export(he_spearman_permutation)
 export(he_tau_permutation)
 export(me_mode)
 export(me_mode_bin)
+export(me_variation_ratio)
 export(r_goodman_kruskal_gamma)
 export(r_kendall_tau)
 export(r_pearson)
@@ -142,8 +143,15 @@ export(ts_z_is)
 export(ts_z_os)
 export(ts_z_ps)
 export(vi_bar_simple)
+export(vi_cleveland_dot_plot)
+export(vi_dot_plot)
+export(vi_pareto_chart)
 export(vi_pie)
 import(graphics)
 import(stats)
 importFrom(fMultivar,pnorm2d)
+importFrom(ggplot2,geom_dotplot)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,scale_y_continuous)
 importFrom(gsl,hyperg_2F1)
+importFrom(lattice,dotplot)
