more documentation changes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -103,6 +103,7 @@ export(ts_fisher_owa)
 export(ts_fligner_policello)
 export(ts_freeman_tukey_gof)
 export(ts_freeman_tukey_ind)
+export(ts_freeman_tukey_read)
 export(ts_g_gof)
 export(ts_g_ind)
 export(ts_hartung_agac_makabi)
