added measures of consensus, median, quantiles and quartiles. Also updated some documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -67,8 +67,13 @@ export(he_owa_table)
 export(he_permutations)
 export(he_spearman_permutation)
 export(he_tau_permutation)
+export(me_consensus)
+export(me_median)
 export(me_mode)
 export(me_mode_bin)
+export(me_quantiles)
+export(me_quartile_range)
+export(me_quartiles)
 export(me_variation_ratio)
 export(r_goodman_kruskal_gamma)
 export(r_kendall_tau)
@@ -143,7 +148,9 @@ export(ts_yuen_is)
 export(ts_z_is)
 export(ts_z_os)
 export(ts_z_ps)
+export(vi_bar_dual_axis)
 export(vi_bar_simple)
+export(vi_bar_stacked_single)
 export(vi_cleveland_dot_plot)
 export(vi_dot_plot)
 export(vi_pareto_chart)
