--- a/NAMESPACE
+++ b/NAMESPACE
@@ -87,6 +87,7 @@ export(r_somers_d)
 export(r_spearman_rho)
 export(r_stuart_tau)
 export(r_tetrachoric)
+export(tab_frequency)
 export(th_cohen_d)
 export(th_cohen_g)
 export(th_cohen_h)
