--- a/NAMESPACE
+++ b/NAMESPACE
@@ -127,6 +127,7 @@ export(ts_neyman_ind)
 export(ts_ozdemir_kurt_b2)
 export(ts_pearson_gof)
 export(ts_pearson_ind)
+export(ts_powerdivergence)
 export(ts_score_os)
 export(ts_scott_smith)
 export(ts_sign_os)
