messing around with quartiles

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,6 +65,8 @@ export(he_import_global)
 export(he_kendall)
 export(he_owa_table)
 export(he_permutations)
+export(he_quartileIndexing)
+export(he_quartilesIndex)
 export(he_spearman_permutation)
 export(he_tau_permutation)
 export(me_consensus)
@@ -160,6 +162,7 @@ export(vi_pie)
 import(graphics)
 import(stats)
 importFrom(fMultivar,pnorm2d)
+importFrom(ggplot2,aes)
 importFrom(ggplot2,geom_dotplot)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,scale_y_continuous)
