--- a/NAMESPACE
+++ b/NAMESPACE
@@ -91,6 +91,7 @@ export(r_spearman_rho)
 export(r_stuart_tau)
 export(r_tetrachoric)
 export(tab_frequency)
+export(tab_nbins)
 export(th_cohen_d)
 export(th_cohen_g)
 export(th_cohen_h)
