--- a/NAMESPACE
+++ b/NAMESPACE
@@ -70,6 +70,7 @@ export(he_quartilesIndex)
 export(he_spearman_permutation)
 export(he_tau_permutation)
 export(me_consensus)
+export(me_mean)
 export(me_median)
 export(me_mode)
 export(me_mode_bin)
