added rules of thumb for pearson r

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -98,6 +98,7 @@ export(th_cohen_g)
 export(th_cohen_h)
 export(th_cohen_w)
 export(th_odds_ratio)
+export(th_pearson_r)
 export(th_yule_q)
 export(ts_alexander_govern)
 export(ts_bhapkar)
