single box plot added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -161,6 +161,7 @@ export(ts_z_ps)
 export(vi_bar_dual_axis)
 export(vi_bar_simple)
 export(vi_bar_stacked_single)
+export(vi_boxplot_single)
 export(vi_cleveland_dot_plot)
 export(vi_dot_plot)
 export(vi_pareto_chart)
