single histogram added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -164,6 +164,7 @@ export(vi_bar_stacked_single)
 export(vi_boxplot_single)
 export(vi_cleveland_dot_plot)
 export(vi_dot_plot)
+export(vi_histogram)
 export(vi_pareto_chart)
 export(vi_pie)
 import(graphics)
