--- a/NAMESPACE
+++ b/NAMESPACE
@@ -77,6 +77,7 @@ export(me_mode_bin)
 export(me_quantiles)
 export(me_quartile_range)
 export(me_quartiles)
+export(me_qv)
 export(me_variation_ratio)
 export(ph_binomial)
 export(r_goodman_kruskal_gamma)
