--- a/NAMESPACE
+++ b/NAMESPACE
@@ -175,5 +175,6 @@ importFrom(ggplot2,aes)
 importFrom(ggplot2,geom_dotplot)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,scale_y_continuous)
+importFrom(grDevices,heat.colors)
 importFrom(gsl,hyperg_2F1)
 importFrom(lattice,dotplot)
