--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,6 +65,8 @@ export(he_import_global)
 export(he_kendall)
 export(he_owa_table)
 export(he_permutations)
+export(he_quantileIndexing)
+export(he_quantilesIndex)
 export(he_quartileIndexing)
 export(he_quartilesIndex)
 export(he_spearman_permutation)
