--- a/NAMESPACE
+++ b/NAMESPACE
@@ -80,6 +80,7 @@ export(me_quantiles)
 export(me_quartile_range)
 export(me_quartiles)
 export(me_qv)
+export(me_variation)
 export(me_variation_ratio)
 export(ph_binomial)
 export(r_goodman_kruskal_gamma)
