added cross table

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -95,6 +95,7 @@ export(r_somers_d)
 export(r_spearman_rho)
 export(r_stuart_tau)
 export(r_tetrachoric)
+export(tab_cross)
 export(tab_frequency)
 export(tab_frequency_bins)
 export(tab_nbins)
