added clustered bar-chart

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -163,6 +163,7 @@ export(ts_yuen_is)
 export(ts_z_is)
 export(ts_z_os)
 export(ts_z_ps)
+export(vi_bar_clustered)
 export(vi_bar_dual_axis)
 export(vi_bar_simple)
 export(vi_bar_stacked_single)
