added some charts

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -168,11 +168,13 @@ export(vi_bar_dual_axis)
 export(vi_bar_simple)
 export(vi_bar_stacked_single)
 export(vi_boxplot_single)
+export(vi_butterfly_chart)
 export(vi_cleveland_dot_plot)
 export(vi_dot_plot)
 export(vi_histogram)
 export(vi_pareto_chart)
 export(vi_pie)
+export(vi_spine_plot)
 import(graphics)
 import(stats)
 importFrom(fMultivar,pnorm2d)
