--- a/NAMESPACE
+++ b/NAMESPACE
@@ -179,6 +179,7 @@ import(graphics)
 import(stats)
 importFrom(fMultivar,pnorm2d)
 importFrom(ggplot2,aes)
+importFrom(ggplot2,geom_bar)
 importFrom(ggplot2,geom_dotplot)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,scale_y_continuous)
