--- a/NAMESPACE
+++ b/NAMESPACE
@@ -179,9 +179,11 @@ import(graphics)
 import(stats)
 importFrom(fMultivar,pnorm2d)
 importFrom(ggplot2,aes)
+importFrom(ggplot2,coord_flip)
 importFrom(ggplot2,geom_bar)
 importFrom(ggplot2,geom_dotplot)
 importFrom(ggplot2,ggplot)
+importFrom(ggplot2,guides)
 importFrom(ggplot2,scale_y_continuous)
 importFrom(grDevices,heat.colors)
 importFrom(gsl,hyperg_2F1)
