--- a/NAMESPACE
+++ b/NAMESPACE
@@ -185,6 +185,8 @@ importFrom(ggplot2,geom_dotplot)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,guides)
 importFrom(ggplot2,scale_y_continuous)
+importFrom(ggplot2,xlab)
+importFrom(ggplot2,ylab)
 importFrom(grDevices,heat.colors)
 importFrom(gsl,hyperg_2F1)
 importFrom(lattice,dotplot)
