--- a/NAMESPACE
+++ b/NAMESPACE
@@ -183,6 +183,7 @@ importFrom(ggplot2,coord_flip)
 importFrom(ggplot2,geom_bar)
 importFrom(ggplot2,geom_dotplot)
 importFrom(ggplot2,ggplot)
+importFrom(ggplot2,guide_legend)
 importFrom(ggplot2,guides)
 importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,xlab)
