bin vs scale tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -150,7 +150,7 @@ export(ts_student_t_is)
 export(ts_student_t_os)
 export(ts_student_t_ps)
 export(ts_trimmed_mean_os)
-export(ts_trimmed_means_t_is)
+export(ts_trimmed_mean_t_is)
 export(ts_trinomial_os)
 export(ts_trinomial_ps)
 export(ts_wald_os)
@@ -159,7 +159,6 @@ export(ts_welch_t_is)
 export(ts_wilcox)
 export(ts_wilcoxon_os)
 export(ts_wilcoxon_ps)
-export(ts_yuen_is)
 export(ts_z_is)
 export(ts_z_os)
 export(ts_z_ps)
