--- a/NAMESPACE
+++ b/NAMESPACE
@@ -149,8 +149,8 @@ export(ts_stuart_maxwell)
 export(ts_student_t_is)
 export(ts_student_t_os)
 export(ts_student_t_ps)
+export(ts_trimmed_mean_is)
 export(ts_trimmed_mean_os)
-export(ts_trimmed_mean_t_is)
 export(ts_trinomial_os)
 export(ts_trinomial_ps)
 export(ts_wald_os)
