bin bin effect sizes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,12 +2,11 @@
 
 export(di_kendall_tau)
 export(di_spearman)
-export(es_alroy_f)
 export(es_alt_ratio)
 export(es_becker_clogg_r)
 export(es_berry_johnston_mielke)
+export(es_bin_bin)
 export(es_bonett_price_r)
-export(es_bonett_price_y)
 export(es_camp_r)
 export(es_cohen_d_os)
 export(es_cohen_d_ow)
@@ -18,24 +17,18 @@ export(es_cohen_h)
 export(es_cohen_h_os)
 export(es_cohen_kappa)
 export(es_cohen_w)
-export(es_cole_c1)
-export(es_cole_c5)
-export(es_cole_c7)
 export(es_common_language_is)
 export(es_common_language_ps)
 export(es_cont_coeff)
 export(es_convert)
 export(es_cramer_v_gof)
 export(es_cramer_v_ind)
-export(es_digby_h)
 export(es_dominance)
-export(es_edward_q)
 export(es_epsilon_sq)
 export(es_epsilon_sq_kw)
 export(es_eta_sq)
 export(es_eta_sq_kw)
 export(es_eta_sq_mc)
-export(es_forbes)
 export(es_glass_delta)
 export(es_goodman_kruskal_lambda)
 export(es_goodman_kruskal_tau)
@@ -43,10 +36,8 @@ export(es_hedges_g_is)
 export(es_hedges_g_os)
 export(es_hedges_g_ps)
 export(es_jbm_e)
-export(es_mcewen_michael)
 export(es_odds_ratio)
 export(es_omega_sq)
-export(es_pearson_q1)
 export(es_pearson_q4)
 export(es_pearson_q5)
 export(es_phi)
@@ -54,9 +45,7 @@ export(es_rmsse)
 export(es_theil_u)
 export(es_tschuprow_t)
 export(es_vargha_delaney_a)
-export(es_yule_q)
 export(es_yule_r)
-export(es_yule_y)
 export(hEfn1)
 export(hEfn2)
 export(he_AS71)
