--- a/NAMESPACE
+++ b/NAMESPACE
@@ -145,6 +145,7 @@ export(ts_z_ps)
 export(vi_bar_clustered)
 export(vi_bar_dual_axis)
 export(vi_bar_simple)
+export(vi_bar_stacked_multiple)
 export(vi_bar_stacked_single)
 export(vi_boxplot_single)
 export(vi_butterfly_chart)
