added split histogram

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -152,6 +152,7 @@ export(vi_butterfly_chart)
 export(vi_cleveland_dot_plot)
 export(vi_dot_plot)
 export(vi_histogram)
+export(vi_histogram_split)
 export(vi_pareto_chart)
 export(vi_pie)
 export(vi_spine_plot)
@@ -160,11 +161,14 @@ import(stats)
 importFrom(fMultivar,pnorm2d)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,coord_flip)
+importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_bar)
 importFrom(ggplot2,geom_dotplot)
+importFrom(ggplot2,geom_histogram)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,guide_legend)
 importFrom(ggplot2,guides)
+importFrom(ggplot2,labs)
 importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,xlab)
 importFrom(ggplot2,ylab)
