--- a/NAMESPACE
+++ b/NAMESPACE
@@ -148,6 +148,7 @@ export(vi_bar_simple)
 export(vi_bar_stacked_multiple)
 export(vi_bar_stacked_single)
 export(vi_boxplot_single)
+export(vi_boxplot_split)
 export(vi_butterfly_chart)
 export(vi_cleveland_dot_plot)
 export(vi_dot_plot)
@@ -168,7 +169,6 @@ importFrom(ggplot2,geom_histogram)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,guide_legend)
 importFrom(ggplot2,guides)
-importFrom(ggplot2,labs)
 importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,xlab)
 importFrom(ggplot2,ylab)
