--- a/NAMESPACE
+++ b/NAMESPACE
@@ -63,6 +63,8 @@ export(me_quartiles)
 export(me_qv)
 export(me_variation)
 export(ph_binomial)
+export(ph_column_proportion)
+export(ph_residual)
 export(r_goodman_kruskal_gamma)
 export(r_kendall_tau)
 export(r_pearson)
@@ -119,8 +121,8 @@ export(ts_neyman_ind)
 export(ts_ozdemir_kurt_b2)
 export(ts_pearson_gof)
 export(ts_pearson_ind)
-export(ts_powerdivergence)
 export(ts_powerdivergence_gof)
+export(ts_powerdivergence_ind)
 export(ts_score_os)
 export(ts_scott_smith)
 export(ts_sign_os)
