--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(di_kendall_tau)
 export(di_spearman)
 export(es_alt_ratio)
+export(es_bag_s)
 export(es_berry_johnston_mielke)
 export(es_bin_bin)
 export(es_cohen_d_os)
@@ -37,6 +38,7 @@ export(es_odds_ratio)
 export(es_omega_sq)
 export(es_phi)
 export(es_rmsse)
+export(es_scott_pi)
 export(es_theil_u)
 export(es_tschuprow_t)
 export(es_vargha_delaney_a)
@@ -64,6 +66,8 @@ export(me_qv)
 export(me_variation)
 export(ph_binomial)
 export(ph_column_proportion)
+export(ph_mcnemar_co)
+export(ph_mcnemar_pw)
 export(ph_residual)
 export(r_goodman_kruskal_gamma)
 export(r_kendall_tau)
