--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,11 +66,14 @@ export(me_qv)
 export(me_variation)
 export(ph_binomial)
 export(ph_column_proportion)
+export(ph_conover_iman)
 export(ph_dunn)
+export(ph_mann_whitney)
 export(ph_mcnemar_co)
 export(ph_mcnemar_pw)
 export(ph_nemenyi)
 export(ph_residual)
+export(ph_sdcf)
 export(r_goodman_kruskal_gamma)
 export(r_kendall_tau)
 export(r_pearson)
