nom vs ord complete

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,10 +23,9 @@ export(es_cramer_v_gof)
 export(es_cramer_v_ind)
 export(es_dominance)
 export(es_epsilon_sq)
-export(es_epsilon_sq_kw)
 export(es_eta_sq)
-export(es_eta_sq_kw)
 export(es_eta_sq_mc)
+export(es_freeman_theta)
 export(es_glass_delta)
 export(es_goodman_kruskal_lambda)
 export(es_goodman_kruskal_tau)
@@ -71,6 +70,7 @@ export(ph_dunn)
 export(ph_mann_whitney)
 export(ph_mcnemar_co)
 export(ph_mcnemar_pw)
+export(ph_mood_median)
 export(ph_nemenyi)
 export(ph_residual)
 export(ph_sdcf)
