--- a/NAMESPACE
+++ b/NAMESPACE
@@ -72,6 +72,7 @@ export(ph_mcnemar_co)
 export(ph_mcnemar_pw)
 export(ph_mood_median)
 export(ph_nemenyi)
+export(ph_pairwise_is)
 export(ph_residual)
 export(ph_sdcf)
 export(r_goodman_kruskal_gamma)
@@ -97,11 +98,11 @@ export(th_cohen_w)
 export(th_odds_ratio)
 export(th_pearson_r)
 export(th_yule_q)
-export(ts_alexander_govern)
+export(ts_alexander_govern_owa)
 export(ts_bhapkar)
 export(ts_binomial_os)
-export(ts_box)
-export(ts_brown_forsythe_means)
+export(ts_box_owa)
+export(ts_brown_forsythe_owa)
 export(ts_cochran_owa)
 export(ts_cochran_q)
 export(ts_cressie_read_gof)
@@ -115,25 +116,25 @@ export(ts_freeman_tukey_ind)
 export(ts_freeman_tukey_read)
 export(ts_g_gof)
 export(ts_g_ind)
-export(ts_hartung_agac_makabi)
-export(ts_james)
+export(ts_ham_owa)
+export(ts_james_owa)
 export(ts_kruskal_wallis)
 export(ts_mann_whitney)
 export(ts_mcnemar_bowker)
-export(ts_mehrota)
+export(ts_mehrotra_owa)
 export(ts_mod_log_likelihood_gof)
 export(ts_mod_log_likelihood_ind)
 export(ts_mood_median)
 export(ts_multinomial_gof)
 export(ts_neyman_gof)
 export(ts_neyman_ind)
-export(ts_ozdemir_kurt_b2)
+export(ts_ozdemir_kurt_owa)
 export(ts_pearson_gof)
 export(ts_pearson_ind)
 export(ts_powerdivergence_gof)
 export(ts_powerdivergence_ind)
 export(ts_score_os)
-export(ts_scott_smith)
+export(ts_scott_smith_owa)
 export(ts_sign_os)
 export(ts_sign_ps)
 export(ts_stuart_maxwell)
@@ -147,7 +148,7 @@ export(ts_trinomial_ps)
 export(ts_wald_os)
 export(ts_welch_owa)
 export(ts_welch_t_is)
-export(ts_wilcox)
+export(ts_wilcox_owa)
 export(ts_wilcoxon_os)
 export(ts_wilcoxon_ps)
 export(ts_z_is)
