nom vs scale done

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -73,6 +73,7 @@ export(ph_mcnemar_pw)
 export(ph_mood_median)
 export(ph_nemenyi)
 export(ph_pairwise_is)
+export(ph_pairwise_t)
 export(ph_residual)
 export(ph_sdcf)
 export(r_goodman_kruskal_gamma)
