--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,6 @@ export(di_kendall_tau)
 export(di_spearman)
 export(es_alt_ratio)
 export(es_bag_s)
-export(es_berry_johnston_mielke)
 export(es_bin_bin)
 export(es_cohen_d_os)
 export(es_cohen_d_ow)
@@ -24,7 +23,6 @@ export(es_cramer_v_ind)
 export(es_dominance)
 export(es_epsilon_sq)
 export(es_eta_sq)
-export(es_eta_sq_mc)
 export(es_freeman_theta)
 export(es_glass_delta)
 export(es_goodman_kruskal_lambda)
@@ -33,6 +31,8 @@ export(es_hedges_g_is)
 export(es_hedges_g_os)
 export(es_hedges_g_ps)
 export(es_jbm_e)
+export(es_jbm_r)
+export(es_kendall_w)
 export(es_odds_ratio)
 export(es_omega_sq)
 export(es_phi)
@@ -67,6 +67,7 @@ export(ph_binomial)
 export(ph_column_proportion)
 export(ph_conover_iman)
 export(ph_dunn)
+export(ph_dunn_q)
 export(ph_mann_whitney)
 export(ph_mcnemar_co)
 export(ph_mcnemar_pw)
