--- a/NAMESPACE
+++ b/NAMESPACE
@@ -68,12 +68,14 @@ export(ph_column_proportion)
 export(ph_conover_iman)
 export(ph_dunn)
 export(ph_dunn_q)
+export(ph_friedman)
 export(ph_mann_whitney)
 export(ph_mcnemar_co)
 export(ph_mcnemar_pw)
 export(ph_mood_median)
 export(ph_nemenyi)
 export(ph_pairwise_is)
+export(ph_pairwise_ps)
 export(ph_pairwise_t)
 export(ph_residual)
 export(ph_sdcf)
@@ -116,6 +118,7 @@ export(ts_fligner_policello)
 export(ts_freeman_tukey_gof)
 export(ts_freeman_tukey_ind)
 export(ts_freeman_tukey_read)
+export(ts_friedman)
 export(ts_g_gof)
 export(ts_g_ind)
 export(ts_ham_owa)
