es pairwise binary

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export(es_jbm_r)
 export(es_kendall_w)
 export(es_odds_ratio)
 export(es_omega_sq)
+export(es_pairwise_bin)
 export(es_phi)
 export(es_rmsse)
 export(es_scott_pi)
