--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,7 +14,7 @@ export(es_cohen_h)
 export(es_cohen_h_os)
 export(es_cohen_kappa)
 export(es_cohen_w)
-export(es_common_language_is2)
+export(es_common_language_is)
 export(es_common_language_ps)
 export(es_cont_coeff)
 export(es_convert)
