--- a/NAMESPACE
+++ b/NAMESPACE
@@ -100,8 +100,10 @@ export(th_cohen_d)
 export(th_cohen_g)
 export(th_cohen_h)
 export(th_cohen_w)
+export(th_cramer_v)
 export(th_odds_ratio)
 export(th_pearson_r)
+export(th_rank_biserial)
 export(th_yule_q)
 export(ts_alexander_govern_owa)
 export(ts_bhapkar)
