added effect size Fei and some conversion options

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(es_cramer_v_ind)
 export(es_dominance)
 export(es_epsilon_sq)
 export(es_eta_sq)
+export(es_fei)
 export(es_freeman_theta)
 export(es_glass_delta)
 export(es_goodman_kruskal_lambda)
