rules of thumb added for Kaiser b

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -102,6 +102,7 @@ export(th_cohen_g)
 export(th_cohen_h)
 export(th_cohen_w)
 export(th_cramer_v)
+export(th_kaiser_b)
 export(th_odds_ratio)
 export(th_pearson_r)
 export(th_rank_biserial)
