--- a/NAMESPACE
+++ b/NAMESPACE
@@ -77,6 +77,7 @@ export(ph_mcnemar_pw)
 export(ph_mood_median)
 export(ph_nemenyi)
 export(ph_pairwise_is)
+export(ph_pairwise_iso)
 export(ph_pairwise_ps)
 export(ph_pairwise_t)
 export(ph_residual)
