--- a/NAMESPACE
+++ b/NAMESPACE
@@ -105,6 +105,7 @@ export(th_kaiser_b)
 export(th_odds_ratio)
 export(th_pearson_r)
 export(th_rank_biserial)
+export(th_vda)
 export(th_yule_q)
 export(ts_alexander_govern_owa)
 export(ts_bhapkar)
