--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ export(es_kendall_w)
 export(es_odds_ratio)
 export(es_omega_sq)
 export(es_pairwise_bin)
+export(es_pairwise_bin_ord)
 export(es_phi)
 export(es_rmsse)
 export(es_scott_pi)
