wilcoxon signed rank distribution

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@
 
 export(di_kendall_tau)
 export(di_scdf)
+export(di_wcdf)
+export(di_wpmf)
 export(es_alt_ratio)
 export(es_bag_s)
 export(es_bin_bin)
@@ -93,6 +95,7 @@ export(r_somers_d)
 export(r_spearman_rho)
 export(r_stuart_tau)
 export(r_tetrachoric)
+export(srf)
 export(tab_cross)
 export(tab_frequency)
 export(tab_frequency_bins)
