Cohen f rules of thumb

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -104,6 +104,7 @@ export(tab_frequency)
 export(tab_frequency_bins)
 export(tab_nbins)
 export(th_cohen_d)
+export(th_cohen_f)
 export(th_cohen_g)
 export(th_cohen_h)
 export(th_cohen_w)
