stem-and-leaf display added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -187,6 +187,7 @@ export(vi_histogram_split)
 export(vi_pareto_chart)
 export(vi_pie)
 export(vi_spine_plot)
+export(vi_stem_and_leaf)
 import(graphics)
 import(stats)
 importFrom(fMultivar,pnorm2d)
