mann whitney u distribution

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,10 @@
 export(di_kendall_tau)
 export(di_mcdf)
 export(di_mpmf)
+export(di_mwwcdf)
+export(di_mwwd)
+export(di_mwwf)
+export(di_mwwpmf)
 export(di_scdf)
 export(di_wcdf)
 export(di_wpmf)
