es_hodges_lehmann_is added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,7 @@ export(es_goodman_kruskal_tau)
 export(es_hedges_g_is)
 export(es_hedges_g_os)
 export(es_hedges_g_ps)
+export(es_hodges_lehmann_is)
 export(es_jbm_e)
 export(es_jbm_r)
 export(es_kendall_w)
