--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(es_cohen_g)
 export(es_cohen_h)
 export(es_cohen_h_os)
 export(es_cohen_kappa)
+export(es_cohen_u)
 export(es_cohen_w)
 export(es_common_language_is)
 export(es_common_language_ps)
