added CLES one-sample

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(es_cohen_kappa)
 export(es_cohen_u)
 export(es_cohen_w)
 export(es_common_language_is)
+export(es_common_language_os)
 export(es_common_language_ps)
 export(es_cont_coeff)
 export(es_convert)
