--- a/NAMESPACE
+++ b/NAMESPACE
@@ -68,6 +68,7 @@ export(he_quartilesIndex)
 export(he_spearman_permutation)
 export(he_tau_permutation)
 export(me_consensus)
+export(me_hodges_lehmann_os)
 export(me_mean)
 export(me_median)
 export(me_mode)
