added post hoc binary tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -87,6 +87,7 @@ export(ph_friedman)
 export(ph_mcnemar_co)
 export(ph_mcnemar_pw)
 export(ph_nemenyi)
+export(ph_pairwise_bin)
 export(ph_pairwise_is)
 export(ph_pairwise_iso)
 export(ph_pairwise_ps)
