fixed multinomial gof

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -214,3 +214,6 @@ importFrom(ggplot2,ylab)
 importFrom(grDevices,heat.colors)
 importFrom(gsl,hyperg_2F1)
 importFrom(lattice,dotplot)
+importFrom(utils,combn)
+importFrom(utils,head)
+importFrom(utils,tail)
