--- a/NAMESPACE
+++ b/NAMESPACE
@@ -93,6 +93,7 @@ export(ph_pairwise_iso)
 export(ph_pairwise_ps)
 export(ph_pairwise_t)
 export(ph_residual)
+export(ph_residual_gof)
 export(ph_sdcf)
 export(r_goodman_kruskal_gamma)
 export(r_kendall_tau)
