--- a/NAMESPACE
+++ b/NAMESPACE
@@ -78,6 +78,7 @@ export(me_quartile_range)
 export(me_quartiles)
 export(me_qv)
 export(me_variation)
+export(p_adjust)
 export(ph_column_proportion)
 export(ph_conover_iman)
 export(ph_dunn)
