--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,6 +50,7 @@ export(es_omega_sq)
 export(es_pairwise_bin)
 export(es_pairwise_bin_ord)
 export(es_phi)
+export(es_post_hoc_gof)
 export(es_rmsse)
 export(es_scott_pi)
 export(es_theil_u)
