--- a/NAMESPACE
+++ b/NAMESPACE
@@ -125,6 +125,7 @@ export(th_cramer_v)
 export(th_kaiser_b)
 export(th_odds_ratio)
 export(th_pearson_r)
+export(th_post_hoc_gof)
 export(th_rank_biserial)
 export(th_yule_q)
 export(ts_alexander_govern_owa)
