brunner munzel test added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -134,6 +134,8 @@ export(ts_bhapkar)
 export(ts_binomial_os)
 export(ts_box_owa)
 export(ts_brown_forsythe_owa)
+export(ts_brunner_munzel)
+export(ts_brunner_munzel_perm)
 export(ts_cochran_owa)
 export(ts_cochran_q)
 export(ts_cressie_read_gof)
