--- a/NAMESPACE
+++ b/NAMESPACE
@@ -136,6 +136,7 @@ export(ts_box_owa)
 export(ts_brown_forsythe_owa)
 export(ts_brunner_munzel)
 export(ts_brunner_munzel_perm)
+export(ts_c_square)
 export(ts_cliff_delta_is)
 export(ts_cochran_owa)
 export(ts_cochran_q)
