moved hodges lehmann to measure

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,7 +41,6 @@ export(es_goodman_kruskal_tau)
 export(es_hedges_g_is)
 export(es_hedges_g_os)
 export(es_hedges_g_ps)
-export(es_hodges_lehmann_is)
 export(es_jbm_e)
 export(es_jbm_r)
 export(es_kendall_w)
@@ -69,6 +68,7 @@ export(he_quartilesIndex)
 export(he_spearman_permutation)
 export(he_tau_permutation)
 export(me_consensus)
+export(me_hodges_lehmann_is)
 export(me_hodges_lehmann_os)
 export(me_mean)
 export(me_median)
