--- a/NAMESPACE
+++ b/NAMESPACE
@@ -201,6 +201,7 @@ export(vi_butterfly_chart)
 export(vi_cleveland_dot_plot)
 export(vi_dot_plot)
 export(vi_histogram)
+export(vi_histogram_b2b)
 export(vi_histogram_split)
 export(vi_pareto_chart)
 export(vi_pie)
