--- a/NAMESPACE
+++ b/NAMESPACE
@@ -219,6 +219,7 @@ importFrom(ggplot2,geom_histogram)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,guide_legend)
 importFrom(ggplot2,guides)
+importFrom(ggplot2,labs)
 importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,xlab)
 importFrom(ggplot2,ylab)
