added binned butterfly chart

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -197,6 +197,7 @@ export(vi_bar_stacked_multiple)
 export(vi_bar_stacked_single)
 export(vi_boxplot_single)
 export(vi_boxplot_split)
+export(vi_butterfly_bin)
 export(vi_butterfly_chart)
 export(vi_cleveland_dot_plot)
 export(vi_dot_plot)
