--- a/NAMESPACE
+++ b/NAMESPACE
@@ -116,18 +116,22 @@ export(tab_frequency)
 export(tab_frequency_bins)
 export(tab_nbins)
 export(th_cle)
+export(th_cliff_delta)
 export(th_cohen_d)
 export(th_cohen_f)
 export(th_cohen_g)
 export(th_cohen_h)
 export(th_cohen_w)
 export(th_cramer_v)
+export(th_gk_gamma)
 export(th_kaiser_b)
 export(th_odds_ratio)
 export(th_pearson_r)
 export(th_point_biserial)
 export(th_post_hoc_gof)
 export(th_rank_biserial)
+export(th_somers_d)
+export(th_vda)
 export(th_yule_q)
 export(ts_alexander_govern_owa)
 export(ts_bhapkar)
