documentation updated and rewrote b2b histogram, and added overlaid histograms

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -207,6 +207,7 @@ export(vi_cleveland_dot_plot)
 export(vi_dot_plot)
 export(vi_histogram)
 export(vi_histogram_b2b)
+export(vi_histogram_overlay)
 export(vi_histogram_split)
 export(vi_pareto_chart)
 export(vi_pie)
@@ -216,7 +217,6 @@ import(graphics)
 import(stats)
 importFrom(fMultivar,pnorm2d)
 importFrom(ggplot2,aes)
-importFrom(ggplot2,after_stat)
 importFrom(ggplot2,coord_flip)
 importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_bar)
@@ -225,7 +225,6 @@ importFrom(ggplot2,geom_histogram)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,guide_legend)
 importFrom(ggplot2,guides)
-importFrom(ggplot2,labs)
 importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,xlab)
 importFrom(ggplot2,ylab)
