--- a/NAMESPACE
+++ b/NAMESPACE
@@ -225,7 +225,9 @@ importFrom(ggplot2,geom_histogram)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,guide_legend)
 importFrom(ggplot2,guides)
+importFrom(ggplot2,scale_fill_manual)
 importFrom(ggplot2,scale_y_continuous)
+importFrom(ggplot2,theme_classic)
 importFrom(ggplot2,xlab)
 importFrom(ggplot2,ylab)
 importFrom(grDevices,heat.colors)
