--- a/NAMESPACE
+++ b/NAMESPACE
@@ -225,6 +225,7 @@ importFrom(ggplot2,geom_histogram)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,guide_legend)
 importFrom(ggplot2,guides)
+importFrom(ggplot2,labs)
 importFrom(ggplot2,scale_fill_manual)
 importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,theme_classic)
