--- a/NAMESPACE
+++ b/NAMESPACE
@@ -217,6 +217,7 @@ import(graphics)
 import(stats)
 importFrom(fMultivar,pnorm2d)
 importFrom(ggplot2,aes)
+importFrom(ggplot2,after_stat)
 importFrom(ggplot2,coord_flip)
 importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_bar)
